releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.13.1
====================
[1959193] PWS now honours the read-only command line parameter (-r)
for first open.  Then governed by R/O open preference or user selecting
read-only at open time.

Changes to Existing Features in 3.13.1
======================================


New Features for 3.13.1
=======================


Bugs fixed in 3.13
==================
[1941360] Rename with F2 now enables Save button.
[1940311] Password Policy now ignores length requirements if not applicable.
[1938057] Non-Latin text now correctly exported to plain text file.
[1926678, 1937293,1939294] Reduce GDI object leaks that cause display problems
during hibernation, screen locking and remote access.
[1914433] It is now possible to view the password policy set for an
individual entry, by shift-clicking on the checked Override Policy
checkbox. A tooltip explaining this is shown when relevant.
[1904391] Many functions, e.g.,  cancelling a rename of an entry,
inter-instance Drag & Drop, no longer collapse the entire tree.
[1904254] Non-text fields (e.g., time) are not shown in Advanced
Search, as they are not searched.
[1900655] Compare advanced subset now applies to current and comparison
databases.
[1899876] Fixed title/user problem when opening v1.7 databases.
[1598836] Correct treeview now displayed after restore from timeout lock.
[1478022] Correct description of this fix in the Release Notes to avoid
user confusion thinking it does something different.
[] Ensure first entry is selected when opening an existing database.
[] XML export of password history fixed for when number to be saved > 99.
[] Fix incorrect lock file handling during SaveAs.

Changes to Existing Features in 3.13
====================================
[] Improved compare database reporting.
[] Copying an empty field to the clipboard now emptied the clipboard
(previously, no action was performed).

New Features for 3.13
=====================